[package]
name = "ic-universal-canister"
version = "0.8.0"
edition = "2018"

[dependencies]
candid = "0.7.4"
hex-literal = "0.2.1"
serde = "1.0.115"

# INFINITY-SWAP: DO NOT REMOVE!!!
# several crates in the ic/rs/ will fail to build and we have to add
# ic-cdk as a dependency explicitly.
ic-cdk = { version = "0.3" }

[dev-dependencies]
ic-crypto-sha = { path = "../../crypto/sha" }
ic-types = { path = "../../types/types" }
